@@ -27,3 +27,12 @@ div.scrollmenu a {
 div.scrollmenu a:hover {
 	background-color: #777;
 }
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: #444;
+   color: white;
+   text-align: center;
+}
