@@ -9,17 +9,13 @@
   <body>
   <div class="scrollmenu">
   <a href="https://sparkylinux.org">Home</a>
+  <a href="https://sparkylinux.org/download/">Download</a>
   <a href="https://forum.sparkylinux.org">Forums</a>
   <a href="https://wiki.sparkylinux.org">Wiki</a>
   <a href="https://sparkylinux.org/donate/">Donate</a>
-  <a href="https://www.facebook.com/groups/SparkyLinux/">Facebook</a>  
-  <a href="https://twitter.com/SparkyLinux">Twitter</a>
-  <a href="https://mewe.com/join-front/sparkylinux">MeWe</a>
-  <a href="https://t.me/sparkylinux">Telegram</a>
-  <a href="https://www.reddit.com/r/SparkyLinux/">Reddit</a>
-  <a href="https://www.patreon.com/sparkylinux">Patreon</a>
+  <a href="https://github.com/sparkylinux">GitHub</a>
   <a href="https://sparkylinux.org/feed/">News</a>
-  <a href=""></a>
+  <a href="https://linuxiarze.pl/sparkylinux">Polski</a>
 </div>
     <br>&nbsp;
     <br>&nbsp;
@@ -30,4 +26,15 @@
      <p style="text-align: center;"><a href="https://sparkylinux.org"><img alt="SparkyLinux" src="data/logo.png" title="SparkyLinux"></a><br></p>
      <div style="text-align: center;"><b>SparkyLinux - friendly and secure OS.<br />Since 2011.</b></div>
 </body>
+<div class="footer">
+  <div class="scrollmenu">
+  <a href="https://www.facebook.com/groups/SparkyLinux/">Facebook</a>  
+  <a href="https://twitter.com/SparkyLinux">Twitter</a>
+  <a href="https://mewe.com/join-front/sparkylinux">MeWe</a>
+  <a href="https://t.me/sparkylinux">Telegram</a>
+  <a href="https://www.reddit.com/r/SparkyLinux/">Reddit</a>
+  <a href="https://mastodon.technology/@SparkyLinux">Mastodon</a>
+  <a href="https://www.patreon.com/sparkylinux">Patreon</a>
+  </div>
+</div>
 </html>
