@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20220621 (2022-06-21)
+-------------------------------------------------------------------------------
+  * Added footer
+
+-------------------------------------------------------------------------------
   Version 20220504 (2022-05-04)
 -------------------------------------------------------------------------------
   * Added favicon
